--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -15,7 +15,8 @@
         android:id="@+id/master_list_fragment"
         android:name="com.example.android.android_me.ui.MasterListFragment"
         android:layout_width="400dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_master_list" />
 
     <!-- A small divider -->
     <View
